--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Execute command when webhooks call",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine-node ."
+    "test": "jasmine-node .",
+    "watch-tests": "jasmine-node . --autotest --watch . --growl"
   },
   "repository": {
     "type": "git",
