--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/christian-fei/hooker",
   "dependencies": {
+    "colors": "^1.0.3",
     "jasmine-node": "^1.14.5",
     "q": "^1.1.2"
   }
